file index changed

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="./styles/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>CV</title>
   </head>
   <body class="container">
@@ -12,7 +12,7 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="../assets/logo.PNG" class="img-fluid" alt="logo" >
+            <img src="./assets/logo.png" class="img-fluid" alt="logo" >
           </a>
           <button
             class="navbar-toggler"
@@ -30,16 +30,16 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="propos.html"> À propos </a>
+                    <a class="nav-link" href="./files/propos.html"> À propos </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="compétance.html">Compétences</a>
+                    <a class="nav-link" href="./files/contact.html">Compétences</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="projets.html">Projets</a>
+                  <a class="nav-link" href="./files/projets.html">Projets</a>
               </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="./files/contact.html">Contact</a>
                  </li>
                
                 </ul>
@@ -55,7 +55,7 @@
                     <h1 class="text-uppercase">JE SUIS Sabrine Attia</h1>
                     <h3 class="text-uppercase">DÉVELOPPEUR FULL STACK JUNIOR</h3>
                     <div class="mt-5">
-                        <a href="contact.html" class="btn first-btn">CONTACTEZ MOI</a>
+                        <a href="./files/contact.html" class="btn first-btn">CONTACTEZ MOI</a>
                         <a href="#" class="btn second-btn ms-3" download="cv.pdf">OBTENEZ MON CV</a>
                     </div>
                 </div>
