--- a/files/compétance.html
+++ b/files/compétance.html
@@ -31,7 +31,7 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Accueil</a
                 >
               </li>
