--- a/files/projets.html
+++ b/files/projets.html
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="propos.html"> À propos </a>
