--- a/files/compétance.html
+++ b/files/compétance.html
@@ -12,7 +12,7 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="../assets/logo.PNG" class="img-fluid" alt="logo" />
+            <img src="../assets/logo.png" class="img-fluid" alt="logo" />
           </a>
           <button
             class="navbar-toggler"
