--- a/files/contact.html
+++ b/files/contact.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../assets/logo.PNG" class="img-fluid" alt="logo">
+                    <img src="../assets/logo.png" class="img-fluid" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
